# vla-profiler

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
configs/: base.yaml
docs/: README.md  TODO.md  hao-meeting-prep-v2.md  hao-meeting-prep.md  learning-plan.md  meeting-cheatsheet.md
exp/: summary.md
notes/: profiling-audit-2026-04-26.md  sglang-profiling-deep-survey.md  survey-plan.md
scripts/: README.md  _profiling_stats.py  download-results.sh  download_openvla.sh  download_pizero_ckpt.sh  download_results.sh  exp08a_interference.py  exp08b_interference_matrix.py  exp08c_contention_model.py  exp09a_cosmos_policy_profiling.py  install_libero.sh  launch_cosmos_profiling.sh  launch_exp.py  launch_exp.sh  launch_exp08b.sh  launch_pizero.sh  monitor_exp.sh  profile_fastwam.py  profile_lingbot_va.py  run_cosmos_libero.py  run_exp03b_libero.py  run_exp04d_libero.sh  run_exp04d_parallel.sh  run_exp07c_libero.py  run_exp09a_sweep.sh  run_fastwam_fullweight.sh  run_libero_all.sh  run_local.sh  run_remote.sh  run_tests.sh  run_viewer.sh  setup_cosmos_policy.sh  setup_fastwam.sh  setup_libero_envs.sh  setup_lingbot_vla.sh  setup_pizero.sh  sync_to_remote.sh  viz_attention_heatmap.py  viz_attention_real_image.py  wam_demo_reproduce.py
slides/: epda-roofline-motivation.html  hao-meeting-2026-04-28.html  hao-meeting-v2-en.html  hao-meeting-v2-outline.md  hao-meeting-v2.html  vlla-phase1-results.html
src/: __init__.py  run_tasks.py
survey/: landscape.md
tests/: test_attention_overlay_task.py  test_attention_task.py  test_demo_reproduce.py  (+5 more)
(+212 files in other folders)
