[project]
name = "vlla"
version = "0.5.0"
description = "VLM/VLA Real-Time Inference Profiling Framework"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0,<2.7",
    "transformers>=4.47.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "easydict>=1.13",
]

[project.optional-dependencies]
qwen = ["qwen-vl-utils>=0.0.8"]
flash = ["flash-attn>=2.5"]
dev = ["pytest>=8.0", "ruff>=0.4"]
# pizero: uv pip install git+https://github.com/allenzren/open-pi-zero.git
# lerobot: uv pip install "lerobot[pi]>=0.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.4"]


[tool.ruff]
line-length = 100
target-version = "py311"
